automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -65,7 +65,7 @@
      "data": {
       "text/plain": [
        "['Solta',\n",
-       " 'Greenville',\n",
+       " 'Greenvill',\n",
        " 'Buenos Aires',\n",
        " 'Los Cabos',\n",
        " 'Walla Walla Valley',\n",
@@ -84,7 +84,7 @@
     }
    ],
    "source": [
-    "['Solta', 'Greenville', 'Buenos Aires', 'Los Cabos', 'Walla Walla Valley', 'Marakesh', 'Albuquerque', 'Archipelago Sea', 'Iguazu Falls', 'Salina Island', 'Toronto', 'Pyeongchang']"
+    "[\"Solta\",\"Greenvill\",\"Buenos Aires\",\"Los Cabos\", \"Walla Walla Valley\",\"Marakesh\",\"Albuquerque\",\"Archipelago Sea\", \"Iguazu Falls\", \"Salina Island\",\"Toronto\",\"Pyeongchang\"]"
    ]
   },
   {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -105,24 +105,22 @@
        "['Croatia',\n",
        " 'USA',\n",
        " 'Argentina',\n",
-       " 'Mexico',\n",
-       " 'USA',\n",
        " 'Morocco',\n",
        " 'New Mexico',\n",
        " 'Finland',\n",
        " 'Argentina',\n",
        " 'Italy',\n",
-       " 'Canada',\n",
+       " 'Canda',\n",
        " 'South Korea']"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'New Mexico', 'Finland', 'Argentina', 'Italy', 'Canada', 'South Korea']"
+    "[\"Croatia\",\"USA\",\"Argentina\",\"Morocco\",\"New Mexico\",\"Finland\", \"Argentina\",\"Italy\", \"Canda\",\"South Korea\"]\n"
    ]
   },
   {
@@ -134,10 +132,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_travel_cities = ['Solta', 'Greenville', 'Buenos Aires', 'Los Cabos', 'Walla Walla Valley', 'Marakesh', 'Albuquerque', 'Archipelago Sea', 'Iguazu Falls', 'Salina Island', 'Toronto', 'Pyeongchang']"
@@ -145,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +161,7 @@
        " 'Pyeongchang']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,10 +172,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "countries_of_top_cities = ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'New Mexico', 'Finland', 'Argentina', 'Italy', 'Canada', 'South Korea']"
@@ -243,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +246,7 @@
        "'Solta'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +275,7 @@
        "'Buenos Aires'"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +302,7 @@
        "'Pyeongchang'"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +329,7 @@
        "'Toronto'"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +347,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_canadian_city = top_travel_cities[-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -362,34 +365,13 @@
        "'Toronto'"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_canadian_city = top_travel_cities[-2]\n",
     "top_canadian_city"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(top_canadian_city)"
    ]
   },
   {
@@ -401,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +403,7 @@
        " 'Pyeongchang']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -441,13 +423,13 @@
        "list"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(top_travel_cities)"
+    "type(top_travel_cities) "
    ]
   },
   {
@@ -466,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +457,7 @@
        "['Solta', 'Greenville']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +497,7 @@
        " 'Pyeongchang']"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +524,7 @@
        "['Walla Walla Valley']"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +616,7 @@
        "['Solta', 'Greenville']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +630,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we have another variable called `top_two` that points to an array which contains an array of elements equal to the first two elements of `top_travel_cities`."
+    "Now we have another variable called `top_two` that points to an array which contains an array of elements equal to first two elements of `top_travel_cities`."
    ]
   },
   {
@@ -667,13 +649,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "top_travel_cities.append('San Antonio')"
+    "top_travel_cities.append(\"San Antonio\")\n"
    ]
   },
   {
@@ -685,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +686,7 @@
        " 'San Antonio']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +726,7 @@
        " 'San Antonio']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +754,7 @@
        "'San Antonio'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +781,7 @@
        "'Walla Walla Valley'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,13 +792,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "top_travel_cities[4] = 4"
+    "top_travel_cities[4] = 4 "
    ]
   },
   {
@@ -862,13 +840,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "top_travel_cities[4] = 'Walla Walla Valley'"
+    "top_travel_cities[4] = \"Walla Walla Valley\" "
    ]
   },
   {
@@ -880,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +877,7 @@
        " 'San Antonio']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,13 +902,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "top_travel_cities.append('Solta')"
+    "top_travel_cities.append(\"Solta\")"
    ]
   },
   {
@@ -951,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +946,7 @@
        " 'Walla Walla Valley'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -991,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +974,7 @@
        "set"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1026,9 +1000,9 @@
      "evalue": "'set' object does not support indexing",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m-------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-3d2453cad46e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0munique_travel_cities\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-36-3d2453cad46e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0munique_travel_cities\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: 'set' object does not support indexing"
      ]
     }
@@ -1046,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1029,7 @@
        "set"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,10 +1047,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 38,
+   "metadata": {},
    "outputs": [],
    "source": [
     "unique_travel_cities = list(unique_travel_cities)"
@@ -1084,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1065,7 @@
        "list"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,28 +1083,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Toronto',\n",
-       " 'Archipelago Sea',\n",
+       "['Los Cabos',\n",
        " 'Iguazu Falls',\n",
-       " 'Pyeongchang',\n",
-       " 'Los Cabos',\n",
-       " 'Buenos Aires',\n",
-       " 'Marakesh',\n",
+       " 'Toronto',\n",
+       " 'San Antonio',\n",
        " 'Greenville',\n",
+       " 'Solta',\n",
+       " 'Archipelago Sea',\n",
+       " 'Walla Walla Valley',\n",
+       " 'Pyeongchang',\n",
+       " 'Buenos Aires',\n",
        " 'Albuquerque',\n",
        " 'Salina Island',\n",
-       " 'Walla Walla Valley',\n",
-       " 'San Antonio',\n",
-       " 'Solta']"
+       " 'Marakesh']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1131,7 @@
        "13"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,16 +1142,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14"
+       "15"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,21 +1219,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
